2005-01-24 Niklas Knutsson  <nq@altern.org>

	* Use the last operator for leftover stack values

2004-11-30 Niklas Knutsson  <nq@altern.org>

	* Show base (if not decimal, hexadecimal or non-standard) as subscript

2004-11-26 Niklas Knutsson  <nq@altern.org>

	* Fix "Convert result" button
	* Use singular instead of abbreviated name for completion

2004-11-21 Niklas Knutsson  <nq@altern.org>
	
	* Fix draw unit
	* Add alternative multiplication dot signs
	* Enhance preferences safety

2004-11-16 Niklas Knutsson  <nq@altern.org>
	
	* Check if unicode characters can be displayed

2004-11-10 Niklas Knutsson  <nq@altern.org>

	* Revert back somewhat to the old behaviour of not rounding exact numbers not in exponential format 

2004-10-25 Niklas Knutsson  <nq@altern.org>

	* Generate vector function

2004-10-24 Niklas Knutsson  <nq@altern.org>

	* Rearrange plot dialog
	* Do not update plot data when not changed
	* Make x variable separate for each plot function

2004-10-22 Niklas Knutsson  <nq@altern.org>

	* Fix angle arguments by adding option default angle unit none where angle units must be specified
	* Represents... for some functions
	* Some tweaks

2004-10-21 Niklas Knutsson  <nq@altern.org>

	* Fix 0.5!

2004-10-20 Niklas Knutsson  <nq@altern.org>

	* Fix comparison of unit with unknown
	* Try with assumptions set to unknown in solve function if not successful

2004-10-19 Niklas Knutsson  <nq@altern.org>
	
	* Fix when size_t not is unsigned int

2004-10-17 Niklas Knutsson  <nq@altern.org>

	* Disable plural forms not at the end of text strings (metersqrt(5) = meter * sqrt(5) instead of meters * qrt(5))
	* Replace new lines with &#10; in definition xml files until we have a better solution

2004-10-14 Niklas Knutsson  <nq@altern.org>

	* Speed-up csum when component(i, "v") is used
	* Give messages in the right order (reversed)
	* Update obsolete plot documentation
	* Clean up parsing
	* Add limit implicit multiplication mode
	* Fix unit conversion