@@ -227,9 +227,10 @@ int main (int argc, char **argv) {
 	if(!calc_arg.empty()) {
 		execute_expression();
 	}
-	
+
 	gchar *gstr = g_build_filename(g_get_home_dir(), ".qalculate", "accelmap", NULL);
 	gtk_accel_map_load(gstr);
+
 	g_free(gstr);
 	
 	gtk_main();
