@@ -1,3 +1,12 @@
+2005-02-02 Niklas Knutsson  <nq@altern.org>
+
+	* Update integration and differentiation (sin(x) != sin(x)*rad) after change in sin() and cos() behaviour
+
+2005-01-25 Niklas Knutsson  <nq@altern.org>
+
+	* Fix RPN crash and don't add lonely stack value to itself
+	* Workaround freeze with message dialog without buttons
+
 2005-01-24 Niklas Knutsson  <nq@altern.org>
 
 	* Use the last operator for leftover stack values
